[package]
name = "migrate-itunes-to-rhythmbox"
version = "0.1.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
edition = "2018"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "1.0.22"
by_address = "1.0.4"
chrono = { version = "0.4.9", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "4.0.0"
elementtree = "1"
log = "0.4.8"
plist = "1.3.1"
serde = { version = "1", features = ["derive"] }
stderrlog = "0.5.1"
